tests/miniJava/neg/000190_mutation.MiniJava
class java { public static public Main ( String [ ] java ) { { } } }
